<resources>
    <string name="app_name">Merchant Onboard</string>
    <string name="app_title">Corals Onboard</string>
    <string name="mobile_number_content">This number will be used to restore your account and future authentications</string>
    <string name="agree_continue">Next</string>
    <string name="checkbox_terms">I read, understood and agree with all terms and conditions of this service</string>
    <string name="setup">Complete your setup in 4 easy steps</string>
    <string name="hours">Business Operating Hours</string>
    <string name="hours_hint">Your operating hours.Write in a way that is clear to your customers </string>
    <string name="setup_hint">You can leave or close this app anytime and resume filling up anytime no data entered will be lost</string>
    <string name="scan_qr_code">Scan QR Code</string>
    <string name="create_redeem">Do you want to create this voucher?</string>
    <string name="update_redeem">Do you want to update this voucher?</string>
    <string name="cloas_app">Are you sure you want to close the Application?</string>
    <string name="offline">You are offline.please check your internet connection</string>
    <string name="reinstall">You have reached the limit.You need to re-install the application</string>
    <string name="dollar_spent">(For every dollar spent , these points will be issued)</string>
    <string name="reward_points">Reward points Redemption voucher</string>
    <string name="remark_add_item">You can add redeem item from admin application too</string>
    <string name="setup_title">Setup Redemption Voucher</string>
    <string name="reward_points_setup">Set up Redemption voucher options for the points awarded</string>
    <string name="points_remark">(Points issued to the customer will be reset to zero if customer did not perform a transaction for days selected)</string>
    <string name="success1">You had successfully submitted the application for Corals App.</string>
    <string name="success2">You will be receiving email with QR code details (if you had requested for new QR code generation)</string>
    <string name="success3">You will also have a PIN that can be used to edit details in this Application.</string>
    <string name="success4">Keep the email and the PIN safe for you to use it in future</string>
    <string name="cancel">Cancel</string>
    <string name="ok">Ok</string>
    <string name="loc_select">Select location of your place on the map</string>
</resources>