<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/alert_dialog_background_white"
    android:orientation="vertical">

    <TextView
        android:id="@+id/message_alert_dialog_title_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="20dp"
        android:text="@string/app_name"
        android:textAppearance="@style/headerTextStyle1"
        android:textColor="@color/colorAccent"
        android:textSize="16sp"
        android:visibility="gone" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:minHeight="100dp"
        android:background="@android:color/transparent"
        android:orientation="vertical"
        android:padding="16sp">

        <TextView
            android:id="@+id/message_alert_dialog_msg_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="start|center"
            android:text="Message"
            android:textAppearance="@style/subHeaderTextStyle1"
            android:textColor="@color/lynch_color"
            android:textSize="16sp" />
    </LinearLayout>

    <LinearLayout
        android:background="@android:color/transparent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal"
        android:paddingStart="18dp"
        android:paddingEnd="18dp"
        android:paddingBottom="12dp">

        <Button
            android:id="@+id/message_alert_dialog_cancel_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_marginEnd="12dp"
            android:layout_weight="1"
            android:text="@string/cancel"
            android:textColor="@color/colorAccent"
            android:textSize="14sp"
            app:strokeColor="@color/colorAccent" />

        <Button
            android:id="@+id/message_alert_dialog_okay_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_weight="1"
            android:text="@string/ok"
            android:textColor="@android:color/background_light"
            android:textSize="14sp"
            app:backgroundTint="@color/colorAccent" />

    </LinearLayout>

</LinearLayout>