<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/framelayout_operating_hours"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/height_50dp"
        android:background="@color/button_background"
        android:elevation="@dimen/margin_8dp"
        android:orientation="horizontal"
        android:weightSum="2">

        <ImageView
            android:background="@android:color/transparent"
            android:foreground="?actionBarItemBackground"
            android:id="@+id/back_arrow"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginLeft="@dimen/margin_8dp"
            android:layout_weight="0.2"
            android:padding="7dp"
            android:src="@drawable/ic_arrow_32dp" />



        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1.8"
            android:gravity="center_vertical"
            android:text="Setup"
            android:textColor="@color/white"
            android:paddingLeft="@dimen/margin_8dp"
            android:textSize="@dimen/text_size_18sp" />


    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="@dimen/height_40dp"
        android:layout_marginTop="@dimen/height_50dp"
        android:gravity="center"
        android:text="@string/hours"
        android:textColor="@color/black"
        android:textSize="@dimen/text_title" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="@dimen/height_90dp"
        android:layout_marginBottom="@dimen/height_50dp"
        android:fillViewport="true"
        android:nestedScrollingEnabled="false">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="@dimen/page_padding">


            <EditText
                android:id="@+id/edit_operating_hours"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/edittext_border"
                android:gravity="top"
                android:hint="@string/hours_hint"
                android:minHeight="@dimen/height_150dp"
                android:padding="@dimen/content_padding"
                android:paddingTop="@dimen/page_padding"
                android:textSize="@dimen/text_size_16sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/height_50dp"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="@dimen/height_30dp"
                    android:layout_height="match_parent"
                    android:padding="@dimen/margin_5dp"
                    android:src="@drawable/maps_red_128"></ImageView>

                <TextView
                    android:id="@+id/text_select_location"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center|left"
                    android:text="@string/loc_select"
                    android:textSize="@dimen/text_size_16sp" />

            </LinearLayout>


            <TextView
                android:id="@+id/text_show_location"
                android:layout_width="match_parent"
                android:layout_height="@dimen/height_40dp"
                android:layout_marginTop="@dimen/marginTop_10dp"
                android:background="@drawable/edittext_border"
                android:gravity="center"
                android:text="Click here"
                android:textColor="#3B91CD"
                android:textSize="@dimen/text_size_16sp" />

            <LinearLayout
                android:id="@+id/layout_location"
                android:layout_width="match_parent"
                android:layout_height="@dimen/height_80dp"
                android:layout_marginTop="@dimen/margin_5dp"
                android:background="@drawable/edittext_border"
                android:orientation="vertical"
                android:visibility="gone">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/height_40dp"
                    android:orientation="horizontal"
                    android:weightSum="1">

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="0.5"
                        android:gravity="center"
                        android:text="Latitude"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/text_lat"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="0.5"
                        android:gravity="center|left" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/height_40dp"
                    android:orientation="horizontal"
                    android:weightSum="1">

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="0.5"
                        android:gravity="center"
                        android:text="   Longitude"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/text_long"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="0.5"
                        android:gravity="center|left" />
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:visibility="gone"
                android:foreground="?android:attr/selectableItemBackground"
                android:clickable="true"
                android:id="@+id/layout_change_location"
                android:layout_width="wrap_content"
                android:layout_height="@dimen/height_35dp"
                android:background="@drawable/capsule_button"
                android:gravity="center|left"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/marginTop_20dp"
                android:elevation="@dimen/padding_4dp"
                android:orientation="horizontal">

                <ImageView
                    android:clickable="false"
                    android:layout_marginStart="@dimen/marginTop_10dp"
                    android:layout_width="@dimen/height_40dp"
                    android:layout_height="match_parent"
                    android:padding="@dimen/margin_5dp"
                    android:src="@drawable/change_logo"
                    android:tint="@color/white" />

                <TextView
                    android:clickable="false"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginEnd="@dimen/marginTop_10dp"
                    android:gravity="center"
                    android:text="Change Location"
                    android:textColor="@color/white"
                    android:visibility="visible" />
            </LinearLayout>

        </LinearLayout>

    </ScrollView>


    <LinearLayout
        android:id="@+id/button_next_operating_hours"
        android:layout_width="match_parent"
        android:layout_height="@dimen/next_button_50dp"
        android:layout_gravity="bottom"
        android:background="@drawable/btn_click_effect"
        android:clickable="true"
        android:foreground="?android:attr/selectableItemBackground"
        android:gravity="center"
        android:orientation="horizontal">

        <Button
            style="?android:attr/borderlessButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:background="@android:color/transparent"
            android:clickable="false"
            android:gravity="right|center"
            android:text="Next"
            android:textColor="@color/white" />

        <ImageView
            android:layout_width="@dimen/height_30dp"
            android:layout_height="match_parent"
            android:layout_marginLeft="-5dp"
            android:layout_marginRight="@dimen/height_30dp"
            android:clickable="false"
            android:padding="@dimen/marginTop_10dp"
            android:src="@drawable/r_arrow"
            android:tint="@color/white" />
    </LinearLayout>


</FrameLayout>